samples/_failures_safe/1761318435_23bc99_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_33286e14.c: In function ‘main’:
./samples/SAFE/__tmp_33286e14.c:158:5: error: expected declaration or statement at end of input
  158 |     }
      |     ^
